Modification de la page index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
- <head><title>Premier labo</title></head>
+ <head><title>deuxieme labo</title></head>
 <body>
 <h1>Mise en œuvre CI/CD</h1>
 </body>
